# AirSeal

./: .gitignore  CERTIFICATES_ADMIN.md  COMPLETE_FILE_EXTENSIONS_LIST.md  IDENTITY_AND_SECURITY.md  LOGIN_AND_POLICY_UPDATE.md  MP4_EXTENSION_FIX.md  QR_READER_UPDATE.md  RESTART_REQUIRED.md  SECURE_FILE_SAVE.md  SECURE_SAVE_FIX.md  SECURE_SAVE_SUMMARY.md  complete_demo.py  demo.py  demo_integration.py  pyproject.toml  regenerate_policies.py  requirements.txt  setup_test_certificates.py  shared_keys.py  test_backend.py  test_password_validation.py  test_policy_extensions.py  test_user_system.py
src/airseal_common/: __init__.py  admin_dialogs.py  cert_admin.py  certificates.py  crypto.py  policy.py  qr.py  scanner.py  user_management.py
src/airseal_receiver/: __init__.py  gui.py
src/airseal_sender/: __init__.py  gui.py
src/documents/: DEMO_SCRIPT.md  EXECUTIVE_SUMMARY.md  MVP_OVERVIEW.md  SECURE_FILE_SAVE.md  SECURITY_ENHANCEMENTS.md  USER_AUTH_GUIDE.md
test_certificates/: ca_certificate.json  config.json  sender_certificate.json
test_certificates/test/: test_certificate.json
test_certificates/test2/: test2_certificate.json
