[tool.poetry]
name = "airseal"
version = "0.1.0"
description = "Cryptographically secure file transfer for air-gapped environments"
authors = ["AirSeal Team"]
readme = "README.md"
packages = [
    { include = "airseal_core", from = "src" },
    { include = "airseal_sender", from = "src" },
    { include = "airseal_receiver", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
PySide6 = "^6.8.0"
pynacl = "^1.5.0"
cbor2 = "^5.6.0"
segno = "^1.6.0"
opencv-python = "^4.10.0"
pyzbar = "^0.1.9"
watchdog = "^5.0.0"
pydantic = "^2.10.0"
typer = "^0.15.0"
rich = "^13.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
mypy = "^1.13.0"
ruff = "^0.8.0"
pyinstaller = "^6.11.0"

[tool.poetry.scripts]
airseal-sender = "airseal_sender.gui:main"
airseal-receiver = "airseal_receiver.gui:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
